--- a/ngo/src/main/resources/application.properties
+++ b/ngo/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto= update
 # App Properties
 ngo.app.jwtSecret= ngoSecretKey
 ngo.app.jwtExpirationMs= 86400000
+ngo.app.clientKey= GoCuse
